# goit-web-hw-07

hw6web/university_project/: alembic.ini  docker-compose.yml  dockerfile  models.py  my_select.py  populate_db.py  pyproject.toml  seed.py
hw6web/university_project/university_project/alembic/: env.py
